// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProfileImage renders 1`] = `
<span
  className="security--profile-image class"
>
  SU
</span>
`;

exports[`ProfileImage renders the large variation 1`] = `
<span
  class="security--profile-image class security--profile-image--large"
>
  SU
</span>
`;
